# googletest_coverage_arm

./: .gitignore  CMakeLists.txt  README.md  cleanbuild_run.sh
src/: absol.cpp  absol.h  main.cpp  multi.cpp  multi.h
unittest/: CMakeLists.txt
unittest/src/: absol_tc.cc
